# parallelTheory

./: README.md
task1/: CMakeLists.txt  README.md  main.cpp
task2/: README.md
task2/subtask1/: CMakeLists.txt  README.md  plot.ipynb  task2_1.cpp
task2/subtask2/: CMakeLists.txt  README.md  main.cpp  plot.ipynb
task2/subtask3/: CMakeLists.txt  README.md  analysisSchedule.cpp  plot.ipynb  var1.cpp  var2.cpp
task3/: README.md
task3/subtask1/: CMakeLists.txt  README.md  main.cpp  plot.ipynb
task3/subtask2/: CMakeLists.txt  README.md  client.h  main.cpp  results.txt  server.h  test_results.txt
task4/: README.md  main.py
task5/: README.md  main.py  plot.ipynb
task6/: README.md  comands.txt  main.cpp  main1.cpp  plots.ipynb  Отчет.md
